--- a/#04. Decision Tree. A Supervised Classification Model/04practice.ipynb
+++ b/#04. Decision Tree. A Supervised Classification Model/04practice.ipynb
@@ -1004,7 +1004,7 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1018,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
