--- a/#04. Decision Tree. A Supervised Classification Model/04session.ipynb
+++ b/#04. Decision Tree. A Supervised Classification Model/04session.ipynb
@@ -1737,7 +1737,7 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1751,7 +1751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
